--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/2_tp_semestre1/1_dictionnaire.ipynb'>[TP 1 : Dictionnaire et recherche séquentielle ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster) <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 1 : Dictionnaire et recherche séquentielle\n",
     "\n",
     "## Recherche séquentielle dans une liste"
    ]
@@ -26,12 +26,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.764610Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.763948Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.792086Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.792762Z"
-    },
     "tags": [
      "cor"
     ]
@@ -97,15 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.799703Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.797904Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.800730Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.801289Z"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dictionnaire = {2: 4, 3: 6}"
@@ -121,14 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.811312Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.810221Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.813381Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.813887Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -154,15 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.819528Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.817851Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.820293Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.820768Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dictionnaire[4] = 8"
@@ -177,15 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.829611Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.828888Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.832300Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.832826Z"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -193,7 +159,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,15 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.838174Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.837558Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.840660Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.841129Z"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -227,7 +186,7 @@
        "dict_keys([2, 3, 4])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,15 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.847738Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.846379Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.849767Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.849216Z"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -279,15 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.855931Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.854186Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.856597Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.857065Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = {}  # dictionnaire vide\n",
@@ -309,14 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.863560Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.861368Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.866893Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.867725Z"
-    },
     "tags": [
      "cor"
     ]
@@ -335,7 +274,7 @@
        "5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,14 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:25.875429Z",
-     "iopub.status.busy": "2021-12-06T15:37:25.874808Z",
-     "iopub.status.idle": "2021-12-06T15:37:25.880895Z",
-     "shell.execute_reply": "2021-12-06T15:37:25.881356Z"
-    },
     "tags": [
      "cor"
     ]
@@ -399,7 +332,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   },
   "title": "Recherche séquentielle et dictionnaire"
  },
