--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -5,23 +5,16 @@
    "id": "f63a5329-194c-40f2-9655-97e6da30d4ce",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/2_tp_semestre1/2_boucles_imbriquees.ipynb'>[TP 2 : Boucles imbriquées ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F2_boucles_imbriquees.ipynb%26branch%3Dmaster) <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 2 : Boucles imbriquées\n",
     "\n",
     "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $3$ et tous les `j` entre $0$ et $2$ :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.437000Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.436367Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.451649Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.452596Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -67,15 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f11a6436-dc54-4f51-b7f1-0a84b8959aee",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.458908Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.457960Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.461040Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.461841Z"
-    },
     "tags": [
      "cor"
     ]
@@ -112,16 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.466937Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.466299Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.471402Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.470828Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,16 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.476677Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.475891Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.535642Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.536168Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
@@ -158,7 +131,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_184/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-f7ab6b692a46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -182,15 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "487e7d00-95fd-4eec-beeb-a26c83b9bcfb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.542605Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.541041Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.543278Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.543786Z"
-    },
     "tags": [
      "cor"
     ]
@@ -230,15 +197,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5e25690a-df9c-4f30-95a9-cc3ef84b7124",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.551675Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.550135Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.552427Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.552904Z"
-    },
     "tags": [
      "cor"
     ]
@@ -299,15 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2cd6bbf2-20ff-4ced-aba9-47d84dd21531",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.566570Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.560763Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.569024Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.569538Z"
-    },
     "tags": [
      "cor"
     ]
@@ -319,7 +274,7 @@
        "(4, 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,15 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "31c52c29-8a92-4db2-8d17-7cd87780eabb",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:30.579795Z",
-     "iopub.status.busy": "2021-12-06T15:37:30.578725Z",
-     "iopub.status.idle": "2021-12-06T15:37:30.581671Z",
-     "shell.execute_reply": "2021-12-06T15:37:30.582166Z"
-    },
     "tags": [
      "cor"
     ]
@@ -389,7 +338,7 @@
        "[1, 2, 3, 4, 8]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
