--- a/files/2_tp_semestre1/3_module.ipynb
+++ b/files/2_tp_semestre1/3_module.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/2_tp_semestre1/3_module.ipynb'>[TP 3 : Modules et packages en Python ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F3_module.ipynb%26branch%3Dmaster) <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 3 : Modules et packages en Python\n",
     "\n",
     "Un module est un fichier Python qui contient des définitions de fonctions et variables, réunies autour d'un même thème. Un package réunit plusieurs modules.  \n",
     "Une des forces de Python et son grand nombre de modules disponibles, et notamment dans les domaines scientifiques.  \n",
@@ -13,15 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:33.117249Z",
-     "iopub.status.busy": "2021-12-06T15:37:33.116609Z",
-     "iopub.status.idle": "2021-12-06T15:37:33.122037Z",
-     "shell.execute_reply": "2021-12-06T15:37:33.121448Z"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math"
@@ -36,15 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:33.137317Z",
-     "iopub.status.busy": "2021-12-06T15:37:33.131888Z",
-     "iopub.status.idle": "2021-12-06T15:37:33.147827Z",
-     "shell.execute_reply": "2021-12-06T15:37:33.148380Z"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -52,7 +38,7 @@
        "2.718281828459045"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,26 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:33.153375Z",
-     "iopub.status.busy": "2021-12-06T15:37:33.151955Z",
-     "iopub.status.idle": "2021-12-06T15:37:33.208558Z",
-     "shell.execute_reply": "2021-12-06T15:37:33.209068Z"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_211/2158743488.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# la fonction qu'on va intégrer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
-     ]
+     "data": {
+      "text/plain": [
+       "(1.5, 1.6653345369377348e-14)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -132,6 +110,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.6931471805599454, 7.695479593116622e-15)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-14d72a1a305b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintegrate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return 1/x\n",
+    "\n",
+    "print(integrate.quad(f, 1, 2))\n",
+    "math.log(2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,26 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:33.214883Z",
-     "iopub.status.busy": "2021-12-06T15:37:33.213192Z",
-     "iopub.status.idle": "2021-12-06T15:37:33.219653Z",
-     "shell.execute_reply": "2021-12-06T15:37:33.220341Z"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_211/2521968441.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgaussienne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgaussienne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# renvoie moyenne et variance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
-     ]
+     "data": {
+      "text/plain": [
+       "(array(0.), array(1.))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -303,6 +309,41 @@
     "1. Retrouver les développements limités en 0 usuels: $\\ln(1+x)$, $\\sqrt{1+x}$, $\\tan(x)$...\n",
     "2. `apart` permet de développer une fraction en éléments simples. Essayer `apart(1/(x*(x+1)))` et vérifier le résultat."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "## `matplotlib`\n",
+    "\n",
+    "Par exemple, `matplotlib` est un package pour réaliser des affichages graphiques. J'ai déjà installé `matplotlib` sur Binder et Jupyterlite, mais, si vous avez un autre éditeur (Pyzo par exemple), il faut l'installer en écrivant, dans le shell :  \n",
+    "```bash\n",
+    "pip install matplotlib\n",
+    "```\n",
+    "`pip` est le gestionnaire de packages officiel de Python.  \n",
+    "Ensuite, vous pouvez utiliser `matplotlib` :"
+   ],
+   "transient": {
+    "remove_source": true
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "source": [
+    "Un"
+   ],
+   "transient": {
+    "remove_source": true
+   }
   }
  ],
  "metadata": {
@@ -324,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
