--- a/files/2_tp_semestre1/4_dichotomie.ipynb
+++ b/files/2_tp_semestre1/4_dichotomie.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/2_tp_semestre1/4_dichotomie.ipynb'>[TP 4 : Recherche par dichotomie ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F4_dichotomie.ipynb%26branch%3Dmaster) <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 4 : Recherche par dichotomie\n",
     "\n",
     "## Retour sur la recherche linéaire"
    ]
@@ -25,6 +25,33 @@
     "- `e = 1` et `L = [2, 4, 1, 7]`\n",
     "3. Soit `L` une liste de taille $n$. Quel est le nombre minimum de comparaisons réalisées par `appartient` sur la liste `L` ? Et le nombre maximum ? Quel est l'indicateur qui vous semble le plus pertinent ?  \n",
     "4. En supposant avoir un ordinateur à 1 GHz (permettant de réaliser $10^9$ opérations par seconde), et qu'une comparaison demande une opération pour le processeur, combien de temps au plus prendrait l'exécution de `appartient` sur une liste de taille $10^{11}$ ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# 1.\n",
+    "def appartient(e, L):\n",
+    "    for x in L:\n",
+    "        if x == e:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "# 2. \n",
+    "# - 1 seule comparaison : appartient(e, L) s'arrête tout de suite\n",
+    "# - 4 comparaisons : appartient(e, L) parcourt toute la liste\n",
+    "# - 3 comparaisons\n",
+    "\n",
+    "# 3. Nombre minimum : 1. Nombre maximum : len(L). Le pire cas est plus pertinent car il si on veut éviter d'attendre trop longtemps.\n",
+    "\n",
+    "# 4. 10**11 / 10**9 = 100 secondes"
    ]
   },
   {
@@ -87,6 +114,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "$4$ comparaisons pour la recherche dichotomique contre $11$ (c'est-à-dire l'indice de $14$) pour la recherche séquentielle (`appartient`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Pour se souvenir de la zone dans laquelle on cherche l'élément $e$ (encadrée sur l'exemple ci-dessus), on utilise deux indices $i$ et $j$."
@@ -124,6 +162,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def dichotomie(e, L):\n",
+    "    i, j = 0, len(L) - 1  # i et j sont les indices de L entre lesquels on cherche e\n",
+    "    while i <= j: # tant qu'il reste au moins 1 élément entre les indices i et j\n",
+    "        m = (i + j)//2 # milieu de i et j\n",
+    "        if e < L[m]:\n",
+    "            j = m - 1 # regarder dans la partie gauche\n",
+    "        elif e > L[m]:\n",
+    "            i = m + 1 # regarder dans la partie droite\n",
+    "        else:\n",
+    "            return True # on a trouvé e\n",
+    "    return False # e n'a pas été trouvé\n",
+    "\n",
+    "L1, L2, L3 = [0, 2], [0, 2, 5], [-2, 1, 2, 4, 6, 7, 8, 9, 11, 12, 14, 15, 18, 22, 54]\n",
+    "assert (dichotomie(0, L1) and not dichotomie(1, L1))\n",
+    "assert (dichotomie(5, L2) and not dichotomie(7, L2))\n",
+    "assert (dichotomie(14, L3) and not dichotomie(-4, L3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -132,6 +198,18 @@
    },
    "source": [
     "**Exercice** : On admet que `dichotomie(e, L)` réalise au plus environ $\\log(n)$ opérations si `L` est de taille $n$. Sur un ordinateur à 1 GHz, combien de temps au plus prendrait l'exécution de `dichotomie` pour une liste de taille $10^{11}$ ?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "$$\\frac{\\log(10^{11})}{10^9} = \\frac{11}{10^9} = 1.1 \\times 10^{-8} \\text{ secondes}$$\n",
+    "`dichotomie` est donc beaucoup plus rapide que `appartient`."
    ]
   },
   {
@@ -155,6 +233,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# 1.\n",
+    "def puissance(a, n):\n",
+    "    r = 1\n",
+    "    for i in range(n):\n",
+    "        r = r * a\n",
+    "    return r\n",
+    "\n",
+    "# 2. n multiplications"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,16 +262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-12-06T15:37:35.679585Z",
-     "iopub.status.busy": "2021-12-06T15:37:35.678929Z",
-     "iopub.status.idle": "2021-12-06T15:37:35.691101Z",
-     "shell.execute_reply": "2021-12-06T15:37:35.691566Z"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "268435456"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "def puissance_rapide(a, n):\n",
     "    r = 1\n",
@@ -199,6 +301,39 @@
     "3. Montrer que la valeur de $r a^n$ reste identique à chaque passage dans le `while`. En déduire que `puissance_rapide(a, n)` renvoie bien $a^n$.  \n",
     "4. Comment pourrais-t-on utiliser une multiplication de moins dans `puissance_rapide`. Modifier la fonction pour ce faire."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "1. \n",
+    "| Nombre de passages dans le while |               r               |       a      |   n  |\n",
+    "|:--------------------------------:|:-----------------------------:|:------------:|:----:|\n",
+    "|                 1                |              $1$              |      $2$     | $12$ |\n",
+    "|                 2                |              $1$              |      $4$     |  $6$ |\n",
+    "|                 3                |              $1$              |  $4^2 = 16$  |  $3$ |\n",
+    "|                 4                |              $16$             | $16^2 = 256$ |  $1$ |\n",
+    "|                 5                | $16\\times 256 = \\boxed{4096}$ |      ...     |  ... |\n",
+    "2. L'exponentiation rapide a effectué $6$ multiplications, alors que `puissance(2, 12)` en fait $12$.  \n",
+    "3. On vérifie que $r a^n$ ne change pas dans les deux possibilités suivantes :\n",
+    "- Si `n` est pair, on remplace $a^n$ par $(a^2)^\\frac{n}{2}$ et $r$ ne change pas, donc $ra^n$ ne change pas.\n",
+    "- Si `n` est impair, on remplace $n$ par $\\frac{n - 1}{2}$ (car `n \\\\ 2` effectue la division entière) donc $ra^n$ est remplacé par $(r\\times a)(a^2)^{\\frac{n - 1}{2}} = r \\times a^n$.  \n",
+    "4. Une fois la dernière valeur de `r` calculée, il ne sert à rien de mettre à jour `a`. Donc on pourrait écrire :\n",
+    "```python\n",
+    "def puissance_rapide(a, n):\n",
+    "    r = 1\n",
+    "    while n > 1:\n",
+    "        if n % 2 == 1:\n",
+    "            r = r * a\n",
+    "        a = a * a\n",
+    "        n = n // 2\n",
+    "    return r * a  # dernière modification de r, quand n == 1\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -220,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
