--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/2_tp_semestre1/5_recursivite.ipynb'>[TP 5 : Récursivité ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F5_recursivite.ipynb%26branch%3Dmaster) <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 5 : Récursivité\n",
     "\n",
     "## Principe général\n",
     "\n",
@@ -13,15 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.353936Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.352890Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.356275Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.355786Z"
-    }
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def f(n):  # exemple de fonction récursive\n",
@@ -40,15 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.361032Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.360418Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.364479Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.364933Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -125,14 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.374265Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.372661Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.375921Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.375460Z"
-    },
     "tags": [
      "cor"
     ]
@@ -184,14 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.384147Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.383540Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.386082Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.386557Z"
-    },
     "tags": [
      "cor"
     ]
@@ -248,14 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.392381Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.391859Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.393862Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.394273Z"
-    },
     "tags": [
      "cor"
     ]
@@ -281,15 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.404132Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.401506Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.406369Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.406775Z"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -297,7 +258,7 @@
        "55"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,14 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.412021Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.410965Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.412639Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.413058Z"
-    },
     "tags": [
      "cor"
     ]
@@ -371,15 +326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.417573Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.416767Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.420586Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.420962Z"
-    }
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dichotomie(e, L):\n",
@@ -408,14 +356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T17:42:54.426985Z",
-     "iopub.status.busy": "2022-01-12T17:42:54.425816Z",
-     "iopub.status.idle": "2022-01-12T17:42:54.428370Z",
-     "shell.execute_reply": "2022-01-12T17:42:54.428834Z"
-    },
     "tags": [
      "cor"
     ]
@@ -457,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
