--- a/files/5_graph/tp/tp4/tp_dfs.ipynb
+++ b/files/5_graph/tp/tp4/tp_dfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp4/tp_dfs.ipynb'>TP 4 : Parcours en profondeur  <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 4 : Parcours en profondeur\n",
     "\n",
     "Dans ce TP, on pourra utiliser la fonction suivante pour afficher un graphe représenté par liste d'adjacence :"
    ]
@@ -199,7 +199,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
    "outputs": [],
    "source": [
     "def composante_connexe(G, v):\n",
