Remove tp graph

--- a/files/5_graph/tp/tp1/tp_graphe_facebook.ipynb
+++ b/files/5_graph/tp/tp1/tp_graphe_facebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp1/tp_graphe_facebook.ipynb'>TP Graphe 1 : Graphe de Facebook  <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 1 : Graphe de Facebook\n",
     "\n",
     "Dans ce TP, nous étudions des [graphes collectés par une équipe de recherche à Stanford](http://snap.stanford.edu/data/index.html) dans différents domaines : réseaux sociaux, réseaux routiers, graphe des avis de consommateurs...\n",
     "\n",
