--- a/files/5_graph/tp/tp2/tp_matrice_adjacence.ipynb
+++ b/files/5_graph/tp/tp2/tp_matrice_adjacence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp2/tp_matrice_adjacence.ipynb'>TP Graphe 2 : Représentation par matrice d'adjacence <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# TP 2 : Représentation par matrice d'adjacence\n",
     "\n",
     "Si nécessaire, [revoir le cours sur les graphes](https://fortierq.github.io/itc1/files/5_graph/1_definition/1_graph) et notamment les notions de sommet, arête, voisin, degré, matrice d'adjacence..."
    ]
