--- a/files/5_graph/3_traversal/bfs/code_bfs.ipynb
+++ b/files/5_graph/3_traversal/bfs/code_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/3_traversal/bfs/code_bfs.ipynb'>Code : parcours en largeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>\n",
+    "# Code : Parcours en largeur\n",
     "\n",
     "## Graphe de test"
    ]
