--- a/files/5_graph/tp/tp5/tp_bfs.ipynb
+++ b/files/5_graph/tp/tp5/tp_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp5/tp_bfs.ipynb'>TP : Parcours en largeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Parcours en largeur"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plus court chemin dans une matrice $0 - 1$"
+    "## Plus court chemin dans une matrice 0 - 1"
    ]
   },
   {
