--- a/files/5_graph/tp/tp5/tp_bfs.ipynb
+++ b/files/5_graph/tp/tp5/tp_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp5/tp_bfs.ipynb'>TP : Parcours en largeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Parcours en largeur"
    ]
   },
   {
@@ -163,7 +163,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plus court chemin dans une matrice 0 - 1"
+    "## Plus court chemin dans une matrice 0 - 1\n",
+    "\n",
+    "Résoudre [ce problème sur LeetCode (site de programmation)](https://leetcode.com/problems/shortest-path-in-binary-matrix).  \n",
+    "Vous devez vous inscrire, sélectionner \"Python\" comme langage et écrire le code puis vérifier directement sur ce site."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calcul de plus court chemin"
    ]
   },
   {
@@ -174,8 +184,18 @@
     ]
    },
    "source": [
-    "Résoudre [ce problème sur LeetCode (site de programmation)](https://leetcode.com/problems/shortest-path-in-binary-matrix).  \n",
-    "Vous devez vous inscrire, sélectionner \"Python\" comme langage et écrire le code puis vérifier directement sur ce site."
+    "**Exercice** : Écrire une fonction `predecessors(G, s)` qui effectue un BFS sur `G` en partant de `s` et qui renvoie une liste `pred` telle que `pred[v]` soit le sommet prédécesseur de `v` dans le parcours en largeur."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "source": [
+    "**Exercice** : En déduire une fonction `shortest_path(G, s, t)` qui renvoie une liste correspondant aux sommets d'un plus court chemin de `s` à `t` dans `G`."
    ]
   }
  ],
