--- a/files/5_graph/tp/tp5/tp_bfs.ipynb
+++ b/files/5_graph/tp/tp5/tp_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp5/tp_bfs.ipynb'>TP : Parcours en largeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Parcours en largeur"
    ]
   },
   {
@@ -156,7 +156,7 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction `distances(G, s)` qui renvoie une liste `dist` telle que `dist[v]` soit la distance (en nombre d'arêtes) du sommet `s` au sommet `v`. Vérifier sur le graphe `G_ex` précédent.  \n",
-    "*Indice* : Définir une liste `d` avec que des `-1` initialement. Stocker des couples (sommet, distance) dans la file `q`. À chaque fois qu'un couple `(u, d)` est retiré, mettre `d` dans `dist[u]`, et ajouter `(v, d + 1)` à la file `q`, pour tout voisin `v` de `u`."
+    "*Indice* : Définir une liste `dist` avec que des `-1` initialement. Stocker des couples (sommet, distance) dans la file `q`. À chaque fois qu'un couple `(u, d)` est retiré, mettre `d` dans `dist[u]` et ajouter `(v, d + 1)` à la file `q`, pour tout voisin `v` de `u`."
    ]
   },
   {
