--- a/files/5_graph/tp/tp5/tp_bfs.ipynb
+++ b/files/5_graph/tp/tp5/tp_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp5/tp_bfs.ipynb'>TP : Parcours en largeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Parcours en largeur"
    ]
   },
   {
@@ -163,8 +163,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plus court chemin dans une matrice 0 - 1\n",
-    "\n",
+    "## Plus court chemin dans une matrice 0 - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "Résoudre [ce problème sur LeetCode (site de programmation)](https://leetcode.com/problems/shortest-path-in-binary-matrix).  \n",
     "Vous devez vous inscrire, sélectionner \"Python3\" comme langage et écrire le code puis vérifier directement sur ce site."
    ]
@@ -219,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
