--- a/files/5_graph/tp/tp5/tp_bfs.ipynb
+++ b/files/5_graph/tp/tp5/tp_bfs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://colab.research.google.com/github/fortierq/itc1/blob/master/files/5_graph/tp/tp5/tp_bfs.ipynb'>TP : Parcours en largeur <img src=https://colab.research.google.com/assets/colab-badge.svg width=100></a></center>"
+    "# TP : Parcours en largeur"
    ]
   },
   {
@@ -175,7 +175,8 @@
    },
    "source": [
     "Résoudre [ce problème sur LeetCode (site de programmation)](https://leetcode.com/problems/shortest-path-in-binary-matrix).  \n",
-    "Vous devez vous inscrire, sélectionner \"Python3\" comme langage et écrire le code puis vérifier directement sur ce site."
+    "Vous devez vous inscrire, sélectionner \"Python3\" comme langage et écrire le code puis vérifier directement sur ce site.  \n",
+    "Il faut afficher (`print(...)`) le résultat, c'est-à-dire la distance entre la case en haut à gauche et la case en bas à droite."
    ]
   },
   {
